Revert "fix heading overlap, proper visual separation of categories"
This reverts commit f8c183d6b0abb3092113bb021f151d4317ee2fb3.

--- a/css/default.css
+++ b/css/default.css
@@ -7,7 +7,7 @@ a img { border:0; }
 
 #categories img { max-width:70px; max-height:70px; vertical-align:middle; }
 #categories li a { width:70px; height:70px; }
-#categories ul { list-style:none; margin:0; padding:0; padding-top:170px; }
+#categories ul { list-style:none; margin:0; padding:0; }
 #categories li { float:left; }
 
 /* locale styling */
@@ -35,12 +35,11 @@ p+h2+p { position:absolute; font-size:3em; margin:-1em 0 0 12.5em; z-index:100; 
 p+h2 a { padding:1em; }
 
 /* category headings */
-h2 { font-size:2.5em; margin-top:40px; position:relative; float:left; clear:left; z-index:-100; text-transform:capitalize; padding:1em 0; }
-h2 a { color:#111; position:absolute; text-align:right; text-shadow:#444 0 1px 0; padding:1em; margin:-1em; }
+h2 { font-size:2em; margin:.3em -5em 0 -3.5em; position:relative; float:left; clear:left; z-index:-100; text-transform:capitalize; padding:1em 0; }
+h2 a { color:#111; position:absolute; text-align:right; text-shadow:#444 0 1px 0; }
 h2 a:hover, h2 a:focus { color:#000; text-shadow:#444 0 1px 0; outline:0; }
 h2#top+ul { margin-bottom:1.5em; }
 
-h2+ul { position:relative; margin-top:170px; }
 h2+ul li { line-height:6em; }
 h2+ul li a { padding:35px 20px; white-space:nowrap; }
 
